--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -42,8 +44,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "@types/styled-components": "^5.1.25"
   }
 }
